plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.12'
	id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

repositories {
	mavenCentral()
	google()
}

dependencies {
	//spring
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	//lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'com.h2database:h2'
	runtimeOnly 'com.mysql:mysql-connector-j'

	//oauth & oauth-client
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.3.4.RELEASE'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.10.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.5'

	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation' // 데이터 유효성 검사

	// google api
	implementation 'com.google.apis:google-api-services-calendar:v3-rev20231123-2.0.0'
	implementation 'com.google.api-client:google-api-client:1.31.3'
	implementation group: 'com.google.api-client', name: 'google-api-client-jackson2', version: '1.20.0'

	//queryDsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//aop
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	//s3
	implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.1.0'
	implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-aws', version: '2.2.6.RELEASE'

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'


}

tasks.named('test') {
	useJUnitPlatform()
}

def querydslSrcDir = 'src/main/generated'
clean {
	delete file(querydslSrcDir)
}

tasks.withType(JavaCompile).configureEach {
	options.generatedSourceOutputDirectory = file(querydslSrcDir)
}